my-apps/media/immich/common/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-web
  namespace: immich
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "photos.vanillax.me"
  rules:
    # - matches:
    #     - path:
    #         type: PathPrefix
    #         value: /api
    #   backendRefs:
    #     - name: immich-server
    #       port: 3001
    #       weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
          weight: 1
